fixed a  bug in the style.css file where a scroll bar appeared on the right side of the page when the message was too long

--- a/templates/style.css
+++ b/templates/style.css
@@ -1,15 +1,17 @@
 body {
     margin: 0;
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 .messages-container {
     flex: 1;
     overflow-y: auto;
     padding-bottom: 50px;
-    height: calc(100vh - 250px);
+    height: calc(100vh - 200px);
     border-bottom: solid 1px lightgray;
+    max-height: calc(100vh - 250px);
 }
 .message pre {
     background-color: #f6f8fa;
